--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,21 @@
-body {
+html, body{
     background-color: #d0d0d0;
+    margin: 0;
+    padding: 0;
+  }
+
+  button {
+    padding: 0;
+    border: 0;
+  }
+
+  #add-btn {
+    width: 40px;
+    height: 30px;
+    border-radius: 5px;
+    background-color : rgb(110, 109, 109);
+    color: white;
+    cursor: pointer;
   }
   
   .centered {
@@ -14,6 +30,7 @@ body {
     width: 50%;
     border-radius: 10px;
     border-style: ridge;
+    border: 0;
   }
   
   .row {
@@ -27,11 +44,11 @@ body {
   .row input {
     border-style: none;
     outline: none;
+    width: 100%;
   }
   
   .task-row {
     font-family: 'Poppins', sans-serif;
-    font-size: small;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -43,4 +60,47 @@ body {
     text-align: center;
     font-size: small;
     color: grey;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 10px;
+  }
+
+  .edit-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 30px;
+    border-radius: 5px;
+    background-color : rgb(5, 3, 87);
+    color:white;
+    cursor: pointer;
+  }
+
+  .remove-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 30px;
+    border-radius: 5px;
+    background-color : rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+
+  input[type="checkbox"]{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+  }
+  
+  input[type="checkbox"]:checked:after{
+    width: 40px;
+    height: 40px;
+    background-color: green;
+    color: green;
+    cursor: pointer;
   }
