--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 html, body{
     background-color: #d0d0d0;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
@@ -39,6 +40,7 @@ html, body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+      padding-bottom: 10px;
   }
   
   .row input {
@@ -48,11 +50,11 @@ html, body{
   }
   
   .task-row {
-    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
   }
   
   .clear {
@@ -102,5 +104,31 @@ html, body{
     height: 40px;
     background-color: green;
     color: green;
+    cursor: pointer;
+  }
+
+  input:focus {
+    outline: none !important;
+    border: none;
+}
+  input[type="text"]{
+    font-family: 'Poppins', sans-serif;
+    font-size: medium;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 0;
+  }
+
+  .check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 30px;
+    border-radius: 5px;
+    background-color : rgb(27, 212, 42);
+    color:rgb(0, 0, 0);
     cursor: pointer;
   }
